# spatial-index-cpp

./: .gitignore  CMakeLists.txt
src/: buffer.h  geohash.h  geoindex_test.cpp
